--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,4 +13,4 @@ adjacency:
 initial_values:
   range: [0, 360, 1]  # star, stop, step // if step == 0, range is continuous
 
-alpha: 0.05
+broj_uredaja: 3
